# FileModifier

./: .gitignore  CMakeLists.txt  README.md  fileprocessor.cpp  fileprocessor.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
FileModifierTestProject/: CMakeLists.txt  tst_fileprocessortest.cpp  tst_fileprocessortest.h
